--- a/04 - button effects/00-template.html
+++ b/04 - button effects/00-template.html
@@ -16,9 +16,15 @@
 				font-size: 40px;
 				text-decoration: none;
 				padding: 40px 80px;
+				font-family: sans-serif;
 				border: 3px solid white;
 				position: relative;
 				transition: all 1s;
+			}
+			a:before {
+				width: 100%;
+				height: 100%;
+				background-color: #fffa56;
 			}
 		</style>
 	</head>
