--- a/04 - button effects/08-creative-text-scaling-button.html
+++ b/04 - button effects/08-creative-text-scaling-button.html
@@ -10,26 +10,42 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				background-color: #222;
 			}
 			a {
 				font-size: 40px;
 				text-decoration: none;
 				padding: 40px 80px;
 				font-family: sans-serif;
-				border: 3px solid white;
+				border: 3px solid gray;
 				position: relative;
-				transition: all 1s;
+				transition: all 0.5s;
+				color: gray;
+				overflow: hidden;
 			}
 			a:before {
+				content: "Hover Me";
+				position: absolute;
+				top: 0;
+				left: 0;
 				width: 100%;
 				height: 100%;
 				background-color: #fffa56;
-				transition: all 1s;
+				background-color: gray;
+				color: white;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				transform: scale(5);
+				opacity: 0;
+				transition: all 0.5s;
+			}
+			a:hover:before {
+				transform: scale(1);
+				opacity: 1;
 			}
 		</style>
 	</head>
 	<body>
-		<a href="#">hover</a>
+		<a href="#">Hover Me</a>
 	</body>
 </html>
