--- a/04 - button effects/09-creative-circular-swapping-button-effect.html
+++ b/04 - button effects/09-creative-circular-swapping-button-effect.html
@@ -10,29 +10,42 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				background-color: #222;
 			}
-			a {
+			.btn {
 				font-size: 40px;
 				text-decoration: none;
 				padding: 40px 80px;
 				font-family: sans-serif;
-				border: 3px solid white;
+				border: 3px solid tomato;
 				position: relative;
-				transition: all 1s;
+				transition: all 0.5s;
+				text-transform: uppercase;
+				color: tomato;
+				background: none;
+				overflow: hidden;
 			}
-			a:before {
+			.btn:hover {
+				color: white;
+			}
+			.btn:before {
+				content: "";
 				position: absolute;
-				left: 0;
 				top: 0;
+				left: 0;
 				width: 100%;
 				height: 100%;
-				background-color: #fffa56;
-				transition: all 1s;
+				background-color: tomato;
+				transition: all 0.5s;
+				z-index: -1;
+				border-radius: 0 0 50% 50%;
+				height: 0%;
+			}
+			.btn:hover:before {
+				height: 190%;
 			}
 		</style>
 	</head>
 	<body>
-		<a href="#">hover</a>
+		<button class="btn" href="#">Button</button>
 	</body>
 </html>
